# instaeda_py

./: CONDUCT.rst  CONTRIBUTING.rst  README.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: instaeda.rst  modules.rst
explore/: Untitled.ipynb  plot_basic_distribution_prototypes.ipynb
instaeda/: instaeda.py
tests/: test_instaeda.py
