[tool.poetry]
name = "instaeda"
version = "0.1.0"
description = "Quick and easy way to clean data and build exploratory data analysis plots"
authors = ["Justin Fu <jufu11@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
