[tool.poetry]
name = "instaeda"
version = "0.1.0"
description = "Quick and easy way to clean data and build exploratory data analysis plots"
authors = ["Justin Fu <jufu11@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
palmerpenguins = "^0.1.4"
altair = "^4.1.0"
numpy = "^1.20.1"
vega-datasets = "^0.9.0"
sklearn = "^0.0"
pytest-cov = "^2.11.1"


[tool.poetry.dev-dependencies]
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
