[tool.poetry]
name = "instaeda"
version = "0.1.3"
description = "Quick and easy way to clean data and build exploratory data analysis plots"
authors = ["Justin Fu <jufu11@gmail.com>"]
license = "MIT"
exclude = [ "./tests/.ipynb_checkpoints/*" ]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
palmerpenguins = "^0.1.4"
altair = "^4.1.0"
numpy = "^1.20.1"
vega-datasets = "^0.9.0"
scikit-learn = "^0.24.1"


[tool.poetry.dev-dependencies]
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.2"
flake8 = "^3.8.4"
pytest-cov = "^2.11.1"

[tool.semantic_release]
version_variable = "instaeda/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
